syntax = "proto3";
package abrpc;

import "transaction.proto";
import "block.proto";

option go_package = "github.com/alphabill-org/alphabill/internal/alphabill/alphabill;alphabill";

service AlphabillService {
  rpc ProcessTransaction(Transaction) returns (TransactionResponse) {};
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse) {};
  rpc GetBlocks(GetBlocksRequest) returns (stream GetBlocksResponse) {};
  rpc GetMaxBlockNumber(GetMaxBlockNumberRequest) returns (GetMaxBlockNumberResponse) {};
}

message GetBlocksRequest {
  uint64 block_number_from = 1;
  uint64 block_number_until = 2;
}

message GetBlocksResponse {
  Block block = 2;
}

message GetBlockRequest {
  uint64 block_number = 1;
}

message GetBlockResponse {
  string error_message = 1;
  Block block = 2;
}

message GetMaxBlockNumberRequest {}

message GetMaxBlockNumberResponse {
  string error_message = 1;
  uint64 block_number = 2;
}


